add tag so that swagger codegen is happy
